--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "dirsync",
-  "version": "1.0.0",
+  "name": "@mikerdean/dirsync",
+  "version": "2.0.0",
   "description": "Synchronise the contents of multiple directories.",
-  "main": "index.js",
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format:prettier": "prettier --write .",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "lint:eslint": "eslint .",
+    "lint:prettier": "prettier --check .",
+    "start": "tsx ./src/index.ts",
+    "test": "NODE_NO_WARNINGS=1 mocha",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [
     "directory",
@@ -13,12 +21,32 @@
     "storage",
     "dir"
   ],
-  "author": "Mike Dean",
-  "license": "ISC",
+  "author": "mikerdean",
+  "license": "MIT",
   "dependencies": {
-    "async": "^2.6.1",
-    "colors": "^1.3.3",
-    "commander": "^2.19.0",
-    "moment": "^2.23.0"
+    "colors": "1.4.0",
+    "commander": "11.0.0",
+    "stream-equal": "2.0.1"
+  },
+  "devDependencies": {
+    "@rollup/plugin-typescript": "11.1.2",
+    "@typescript-eslint/eslint-plugin": "6.1.0",
+    "@typescript-eslint/parser": "6.1.0",
+    "@types/node": "20.4.2",
+    "eslint": "8.45.0",
+    "prettier": "3.0.0",
+    "tsx": "3.12.7",
+    "typescript": "5.1.6"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mikerdean/dirsync.git"
+  },
+  "homepage": "https://github.com/mikerdean/dirsync",
+  "bugs": {
+    "url": "https://github.com/mikerdean/dirsync/issues"
+  },
+  "volta": {
+    "node": "18.17.0"
   }
 }
